--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 *{
     transition:all 0.2s;
-	font-family: 'Maven Pro', sans-serif;
-	user-select: none;
+    font-family: 'Maven Pro', sans-serif;
+    user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -53,26 +53,41 @@ body{
 }
 
 .help_{
-	background-color:rgba(105, 104, 254, 1);
-	color:#222222;
-	font-weight:900;
-	width:120px;
-	padding:100px;
-	padding-bottom:160px;
-	padding-top:170px;
-	text-align:center;
-	margin:10px;
-	font-size:30px;
-	display:inline-block;
-	cursor:pointer;
-	z-index:-1;
+    background-color:rgba(105, 104, 254, 1);
+    color:#222222;
+    font-weight:900;
+    width:120px;
+    padding:100px;
+    padding-bottom:160px;
+    padding-top:170px;
+    text-align:center;
+    margin:10px;
+    font-size:30px;
+    display:inline-block;
+    cursor:pointer;
+    z-index:-1;
+}
+
+.toggles{
+    border:2px solid rgb(225, 70, 90);
+    border-radius:0px;
+    background-color:rgb(225, 60, 60);
+    color:white;
+    font-weight:900;
+    box-shadow:0px 5px 1px rgb(225, 0, 00);
+    margin:30px;
+    z-index:1;
+}
+
+.toggles:hover{
+    color:black;
 }
 
 .help_:hover{
-    	background-color:white;
-	transform:rotateX(10deg);
-	box-shadow: 10px 10px 5px rgba(105, 104, 254, 1);
-	z-index:1;
+        background-color:white;
+    transform:rotateX(10deg);
+    box-shadow: 10px 10px 5px rgba(105, 104, 254, 1);
+    z-index:1;
 }
 
 .show{
@@ -96,40 +111,40 @@ body{
 }
 
 .game_area_container{
-	border:5px solid white;
-	left:0;
-	right:0;
-	margin:auto;
+    border:5px solid white;
+    left:0;
+    right:0;
+    margin:auto;
 }
 
 .game_area{
-	width:100%;
-	height:100%;
-	position:absolute;
-	top:0;
-	bottom:0;
-	left:0;
-	right:0;
-	margin:auto;
-	text-align:center;
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+    text-align:center;
 }
 
 .finds_container{
-	background-color:#333333;
-	height:60px;
-	padding:17px;
-	text-align:center;
+    background-color:#333333;
+    height:60px;
+    padding:17px;
+    text-align:center;
 }
 
 .finds{
     font-size:22px;
-	width:200px;
-	padding:10px;
-	display:inline-block;
-	margin-left:50px;
-	margin-right:50px;
-	margin-top:5px;
-	border-radius:10px;
+    width:200px;
+    padding:10px;
+    display:inline-block;
+    margin-left:50px;
+    margin-right:50px;
+    margin-top:5px;
+    border-radius:10px;
 }
 
 .setting{
@@ -159,27 +174,27 @@ body{
 }
 
 .game_elements{
-	border:1px solid none;
-	width:80%;
-	height:80%;
-	position:absolute;
-	top:50px;
-	bottom:0;
-	left:0;
-	right:0;
-	margin:auto;
-	text-align:center;
+    border:1px solid none;
+    width:80%;
+    height:80%;
+    position:absolute;
+    top:50px;
+    bottom:0;
+    left:0;
+    right:0;
+    margin:auto;
+    text-align:center;
 }
 
 .bot{
-	width:100px;
+    width:100px;
     height:15px;
     padding:5px;
     text-align:center;
     font-size:13px;
-	margin-left:30%;
-	margin-bottom:10px;
-	
+    margin-left:30%;
+    margin-bottom:10px;
+    
     border:2px solid rgb(100, 100, 205);
     border-radius:0px;
     background-color:rgb(100, 100, 225);
@@ -192,15 +207,15 @@ body{
     border:1px solid none;
     width:300px;
     height:87px;
-	padding:4px;
-	text-align:center;
-	display:inline-block;
-	margin-top:20px;
-	margin-bottom:40px;
-	margin-left:140px;
-	margin-right:110px;
-	cursor:pointer;
-	opacity:1;
+    padding:4px;
+    text-align:center;
+    display:inline-block;
+    margin-top:20px;
+    margin-bottom:40px;
+    margin-left:140px;
+    margin-right:110px;
+    cursor:pointer;
+    opacity:1;
 }
 
 .button{
@@ -210,7 +225,7 @@ body{
     text-align:center;
     font-size:23px;
     border-radius:10px;
-	
+    
     border:2px solid rgb(225, 70, 90);
     border-radius:0px;
     background-color:rgb(225, 60, 60);
@@ -220,8 +235,8 @@ body{
 }
 
 .clicked{
-	padding:9px;
-	font-size:21px;
+    padding:9px;
+    font-size:21px;
 }
 
 .sub{
@@ -236,12 +251,12 @@ body{
     display:inline-block;
     text-align:center;
     margin:10px;
-	
+    
     color:white;
     width:44px;
     padding:5px;
     font-size:9px;
-	border-radius:4px;
+    border-radius:4px;
     border:2px solid rgb(225, 70, 90);
     transform:rotatex(10deg);
     box-shadow:0px 7px 4px rgb(225, 0, 0);
@@ -251,8 +266,8 @@ body{
 }
 
 .deactivated{
-	opacity:0.1;
-	cursor:default;
+    opacity:0.1;
+    cursor:default;
 }
 
 .active{
@@ -264,6 +279,3 @@ body{
     box-shadow:0px 5px 1px rgb(225, 0, 00);
     transform:rotate(2deg);
 }
-
-
-
